--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         <span><a href="#">Locations</a></span>
       </nav>
     </header>
-
+    <div class="mission">
+        <div class="text-content">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+    </div>
 
 
 
