--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="resources/images/img-tea-cozy-logo.png">
+        <img src="resources/images/img-tea-cozy-logo.png" />
       </div>
       <nav>
         <span><a href="#">Mission</a></span>
@@ -22,7 +22,33 @@
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
     </div>
-
+    <div class="tea-of-the-month">
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at The Tea Cozy?</h4>
+      <div class="whats-steeping">
+        <div class="menu-item berry">
+          <img src="resources/images/img-berryblitz.jpg" />
+          <h4>Fall Berry Blitz Tea</h4>
+        </div>
+        <div class="menu-item rum">
+          <img src="resources/images/img-spiced-rum.jpg" />
+          <h4>Spiced Rum Tea</h4>
+        </div>
+        <div class="menu-item donuts">
+          <img src="resources/images/img-donut.jpg" />
+          <h4>Seasonal Donuts</h4>
+        </div>
+        <div class="menu-item myrtle">
+          <img src="resources/images/img-donut.jpg" />
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+        <div class="menu-item bedford">
+          <img src="resources/images/img-bedford-bizarre.jpg" />
+          <h4>Bedford Bizarre Tea</h4>
+        </div>
+      </div>
+    </div>
+    
 
 
 
