--- a/index.html
+++ b/index.html
@@ -48,7 +48,30 @@
         </div>
       </div>
     </div>
-    
+    <div class="locations">
+      <h2>Locations</h2>
+      <div class="address-container">
+        <div class="address downtown">
+          <h3>Downtown</h3>
+          <span>384 West 4th St</span>
+          <span>Suite 108</span>
+          <span>Portland, Maine</span>
+        </div>
+        <div class="address east-bayside">
+          <h3>East Bayside</h3>
+          <span>3433 Phisherman's Avenue</span>
+          <span>(Northwest Corner)</span>
+          <span>Portland, Maine</span>
+        </div>
+        <div class="address oakdale">
+          <h3>Oakdale</h3>
+          <span>515 Crescent Avenue</span>
+          <span>Second Floor</span>
+          <span>Portland, Maine</span>
+        </div>
+      </div>
+    </div>
+
 
 
 
