--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
         <img src="resources/images/img-tea-cozy-logo.png" />
       </div>
       <nav>
-        <span><a href="#">Mission</a></span>
-        <span><a href="#">Featured Tea</a></span>
-        <span><a href="#">Locations</a></span>
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#featured-tea">Featured Tea</a></span>
+        <span><a href="#locations">Locations</a></span>
       </nav>
     </header>
-    <div class="mission">
+    <div class="mission" id="mission">
         <div class="text-content">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
     </div>
-    <div class="tea-of-the-month">
+    <div class="tea-of-the-month" id="featured-tea">
       <h2>Tea of the Month</h2>
       <h4>What's Steeping at The Tea Cozy?</h4>
       <div class="whats-steeping">
@@ -48,7 +48,7 @@
         </div>
       </div>
     </div>
-    <div class="locations">
+    <div class="locations" id="locations">
       <h2>Locations</h2>
       <div class="address-container">
         <div class="address downtown">
@@ -71,10 +71,16 @@
         </div>
       </div>
     </div>
-
-
-
-
+    <footer>
+      <h2>The Tea Cozy</h2>
+      <div class="contact">
+        <h5>contact&#64;theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+      </div>
+      <div class="copyright">
+        <h5>copyright The Tea Cozy 2017</h5>
+      </div>
+    </footer>
 
   </body>
 </html>
